Mark system includes as such
This ignores warnings in foreign includes (e.g. clunk)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ IF(DIAGEN_TEST)
 ENDIF(DIAGEN_TEST)
 
 # globals
-INCLUDE_DIRECTORIES(
+INCLUDE_DIRECTORIES(SYSTEM
 	${SDL2_INCLUDE_DIR}
 	${SDL2_NET_INCLUDE_DIR}
 	${FFMPEG_INCLUDE_DIRS}
