Enforce local includes order

--- a/lib/xtool/CMakeLists.txt
+++ b/lib/xtool/CMakeLists.txt
@@ -31,6 +31,6 @@ IF(DXSTREAM_DEBUG)
 	ADD_DEFINITIONS(-DXSTREAM_DEBUG)
 ENDIF(DXSTREAM_DEBUG)
 
-INCLUDE_DIRECTORIES(.)
+INCLUDE_DIRECTORIES(BEFORE .)
 
 ADD_LIBRARY(xtool STATIC ${xtool_SRCS})
