OSX CMakeFiles fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,9 @@ FIND_PACKAGE(SDL2 REQUIRED)
 FIND_PACKAGE(SDL2_net REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
-if (NOT APPLE)
-	FIND_PACKAGE(VorbisFile REQUIRED)
-endif (NOT APPLE)
+#if (NOT APPLE)
+FIND_PACKAGE(VorbisFile REQUIRED)
+#endif (NOT APPLE)
 
 FIND_PACKAGE(Clunk REQUIRED)
 if (MINGW)
@@ -50,6 +50,15 @@ else (MINGW)
 	set(WINDOWS_RES "")
 endif (MINGW)
 
+IF (APPLE)
+    FIND_LIBRARY(COREAUDIO_LIBRARY CoreAudio)
+    FIND_LIBRARY(COREMEDIA_LIBRARY CoreMedia)
+    FIND_LIBRARY(COREFOUNDATION_LIBRARY CoreFoundation )
+    FIND_LIBRARY(VIDEOTOOLBOX_LIBRARY VideoToolbox )
+    FIND_LIBRARY(AUDIOTOOLBOX_LIBRARY AudioToolbox )
+    find_package (BZip2)
+    SET(APPLE_LIB ${COREAUDIO_LIBRARY} ${COREFOUNDATION_LIBRARY} ${VIDEOTOOLBOX_LIBRARY} ${AUDIOTOOLBOX_LIBRARY} ${BZIP2_LIBRARIES} ${COREMEDIA_LIBRARY})
+ENDIF (APPLE)
 
 
 IF(RUSSIAN_VERSION)
@@ -90,7 +99,6 @@ IF (NOT MINGW)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftree-vectorize -ffast-math")
 ENDIF (NOT MINGW)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
-
 
 
 # subdirs
