--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
+  - sudo apt-get install -qq cmake
+  - sudo apt-get install -qq libsdl2-dev
+  - sudo apt-get install -qq libsdl2-net-dev
+  - sudo apt-get install -qq libogg-dev
+  - sudo apt-get install -qq libvorbis-dev
+  - sudo apt-get install -qq libavcodec-dev
+  - sudo apt-get install -qq libavformat-dev
+  - sudo apt-get install -qq libavutil-dev
 
   - git clone --depth 1 https://github.com/stalkerg/clunk.git /tmp/clunk
   - cd /tmp/clunk && cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
