--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
   - gcc
   - clang
 before_install:
-  - sudo apt-get update -qq
+#  - sudo apt-get update -qq
   - sudo apt-get install -qq cmake
   - sudo apt-get install -qq libsdl2-dev
   - sudo apt-get install -qq libsdl2-net-dev
