Fix cmakes for normal mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ OPTION(DIAGEN_TEST "Dialog generator and test subsystem" OFF)
 OPTION(ACTINT "Actint user interface in road game" ON) 
 
 SET(CMAKE_CONFIGURATION_TYPES "Release;Debug;MinSizeRel;RelWithDebInfo")
+IF(MINGW)
+		SET(CMAKE_FIND_LIBRARY_SUFFIXES ".dll")
+ENDIF()
 
 # depends
 FIND_PACKAGE(SDL2 REQUIRED)
@@ -25,30 +28,10 @@ FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(VorbisFile REQUIRED)
 
 FIND_PACKAGE(Clunk REQUIRED)
-if (MINGW)
-	ADD_DEFINITIONS(-I/local/include/)
-	ADD_DEFINITIONS(-L/local/lib/)
-	#set(SDL_net_INCLUDE_DIR "/local/include/SDL")
-	ADD_DEFINITIONS(-I/local/include/SDL2)
-	#set(SDLNET_LIBRARY "/local/bin/SDL_net.dll")
-	
-	set(FFMPEG_INCLUDE_DIRS "/local/include/libavcodec /local/include/libavformat")
-	ADD_DEFINITIONS(-I/local/include/libavcodec -I/local/include/libavformat)
-	set(FFMPEG_LIBRARIES "/local/bin/avutil-52.dll" "/local/bin/avformat-54.dll" "/local/bin/avcodec-54.dll")
-	set(ZLIB_LIBRARIES "/local/lib/zlib1.dll")
-	
-	set(CLUNK_INCLUDE_DIR "/local/include/clunk")
-	ADD_DEFINITIONS(-I/local/include/clunk)
-	set(CLUNK_LIBRARY "/local/lib/libclunk.dll")
-	set(WINDOWS_RES "../vangers.res")
-	ADD_DEFINITIONS(-Wl,-subsystem,windows)
-else (MINGW)
-	FIND_PACKAGE(FFMPEG REQUIRED)
-	FIND_PACKAGE(ZLIB REQUIRED)
-	set(WINDOWS_RES "")
-endif (MINGW)
 
-
+FIND_PACKAGE(FFMPEG REQUIRED)
+FIND_PACKAGE(ZLIB REQUIRED)
+set(WINDOWS_RES "../vangers.res")
 
 IF(RUSSIAN_VERSION)
 	ADD_DEFINITIONS(-DRUSSIAN_VERSION)
@@ -72,6 +55,7 @@ ENDIF(DIAGEN_TEST)
 
 # globals
 INCLUDE_DIRECTORIES(SYSTEM
+	${ZLIB_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
 	${SDL2_NET_INCLUDE_DIR}
 	${FFMPEG_INCLUDE_DIRS}
@@ -79,17 +63,16 @@ INCLUDE_DIRECTORIES(SYSTEM
 	${OGG_INCLUDE_DIR}
 	${VORBIS_INCLUDE_DIR}
 	${VORBISFILE_INCLUDE_DIR}
-	/usr/local/include
 )
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wno-unused-parameter")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wno-unused-parameter -fpermissive")
+# For modern gcc
+add_definitions(-D_USE_MATH_DEFINES)
 
 IF (NOT MINGW)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftree-vectorize -ffast-math")
 ENDIF (NOT MINGW)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
-
-
 
 # subdirs
 ADD_SUBDIRECTORY("src")
