Frame split into 4 responsive chunks
+ sdl2_image dependency
+ Added Screen class
* Renamed Widget::recalc_anchors to layout()
* Switching screens when changing mode
- removed ibs code
- removed ibs code from resources
- removed unused code
* Code style: replaced 4 spaces with TABs
* Moved layout calls to init code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(CMAKE_CONFIGURATION_TYPES "Release;Debug;MinSizeRel;RelWithDebInfo")
 # depends
 FIND_PACKAGE(SDL2 REQUIRED)
 FIND_PACKAGE(SDL2_net REQUIRED)
+FIND_PACKAGE(SDL2_image REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(VorbisFile REQUIRED)
@@ -74,6 +75,7 @@ ENDIF(DIAGEN_TEST)
 INCLUDE_DIRECTORIES(SYSTEM
 	${SDL2_INCLUDE_DIR}
 	${SDL2_NET_INCLUDE_DIR}
+	${SDL2_IMAGE_INCLUDE_DIR}
 	${FFMPEG_INCLUDE_DIRS}
 	${CLUNK_INCLUDE_DIR}
 	${OGG_INCLUDE_DIR}
