--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,6 +81,7 @@ TARGET_LINK_LIBRARIES(vangers
 	${VORBISFILE_LIBRARY}
 	${CLUNK_LIBRARY}
 	${SDL2_NET_LIBRARY}
+		${SDL2_IMAGE_LIBRARY}
 	${FFMPEG_LIBRARIES}
 	${ZLIB_LIBRARIES}
 	${OPENGL_LIBRARIES}
