--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,7 @@ SET(vangers_SRCS
 	xsocket.cpp
 	zmod_client.cpp 
 	${WINDOWS_RES}
-		cli_options.cpp cli_options.h)
+		cli_options.cpp cli_options.h util/ring_buffer.h util/Timer.cpp util/Timer.h util/TimerStorage.cpp util/TimerStorage.h util/PerfWidget.cpp util/PerfWidget.h)
 
 ADD_EXECUTABLE(vangers ${vangers_SRCS})
 
