--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ FIND_PACKAGE(SDL2_image REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(VorbisFile REQUIRED)
+FIND_PACKAGE(GLEW REQUIRED)
+find_package(GLM REQUIRED)
 
 FIND_PACKAGE(Clunk REQUIRED)
 
@@ -45,10 +47,7 @@ IF(BINARY_SCRIPT)
 	ADD_DEFINITIONS(-D_BINARY_SCRIPT_)
 ENDIF(BINARY_SCRIPT)
 
-IF(WITH_OPENGL)
-	FIND_PACKAGE(OpenGL REQUIRED)
-	ADD_DEFINITIONS(-DWITH_OPENGL)
-ENDIF(WITH_OPENGL)
+FIND_PACKAGE(OpenGL REQUIRED)
 
 IF(ACTINT)
 	ADD_DEFINITIONS(-DACTINT)
@@ -69,6 +68,8 @@ INCLUDE_DIRECTORIES(SYSTEM
 	${OGG_INCLUDE_DIR}
 	${VORBIS_INCLUDE_DIR}
 	${VORBISFILE_INCLUDE_DIR}
+	${GLEW_INCLUDE_DIR}
+	${GLM_INCLUDE_DIR}
 )
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -msse2")
