--- a/lib/xgraph/CMakeLists.txt
+++ b/lib/xgraph/CMakeLists.txt
@@ -5,10 +5,12 @@ include_directories(
 SET(xgraph_SRCS
 	xfont.cpp
 	xgraph.cpp
+	gl.cpp
 )
 
 ADD_LIBRARY(xgraph STATIC ${xgraph_SRCS})
 
 TARGET_LINK_LIBRARIES(xgraph
 	${SDL2_LIBRARY}
+		${OPENGL_LIBRARIES}
 )
