--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,7 +69,8 @@ SET(vangers_SRCS
 	xsocket.cpp
 	zmod_client.cpp 
 	${WINDOWS_RES}
-		cli_options.cpp cli_options.h util/ring_buffer.h util/Timer.cpp util/Timer.h util/TimerStorage.cpp util/TimerStorage.h util/PerfWidget.cpp util/PerfWidget.h)
+		cli_options.cpp cli_options.h util/ring_buffer.h util/Timer.cpp util/Timer.h util/TimerStorage.cpp util/TimerStorage.h util/PerfWidget.cpp util/PerfWidget.h
+		cli_options.cpp cli_options.h terra/vmaprenderer.cpp terra/vmaprenderer.h ../lib/xgraph/gl.cpp ../lib/xgraph/gl.h)
 
 ADD_EXECUTABLE(vangers ${vangers_SRCS})
 
@@ -92,6 +93,8 @@ TARGET_LINK_LIBRARIES(vangers
 	${FFMPEG_LIBRARIES}
 	${ZLIB_LIBRARIES}
 	${OPENGL_LIBRARIES}
+		${GLEW_LIBRARIES}
+		${GLM_LIBRARIES}
 	${WIN_LIB}
 	xtool
 	xgraph
