--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,3 +72,4 @@ ADD_SUBDIRECTORY("lib/xgraph")
 ADD_SUBDIRECTORY("lib/xsound")
 ADD_SUBDIRECTORY("lib/xtool")
 ADD_SUBDIRECTORY("lib/utils")
+ADD_SUBDIRECTORY("server")
