--- a/lib/xgraph/CMakeLists.txt
+++ b/lib/xgraph/CMakeLists.txt
@@ -5,7 +5,18 @@ include_directories(
 SET(xgraph_SRCS
 	xfont.cpp
 	xgraph.cpp
-	gl.cpp
+		gl/Camera.cpp
+		gl/Camera.h
+		gl/SmartShader.cpp
+		gl/SmartShader.h
+		gl/Texture.cpp
+		gl/Texture.h
+		gl/common.h
+		gl/common.cpp
+		gl/Shader.h
+		gl/Shader.cpp
+		gl/PlainTextureShader.cpp
+		gl/PlainTextureShader.h
 )
 
 ADD_LIBRARY(xgraph STATIC ${xgraph_SRCS})
