Add include to libs for other sub-libs and main app.

--- a/lib/xsound/CMakeLists.txt
+++ b/lib/xsound/CMakeLists.txt
@@ -1,3 +1,8 @@
+include_directories(
+	"${PROJECT_SOURCE_DIR}/lib/xtool"
+	"${PROJECT_SOURCE_DIR}/lib/xgraph"
+)
+
 SET(xsound_SRCS
 	xsound.cpp
 	avi.cpp
