--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ ENDIF(DIAGEN_TEST)
 
 # globals
 INCLUDE_DIRECTORIES(SYSTEM
+    ${CMAKE_INSTALL_PREFIX}/include
 	${ZLIB_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
 	${SDL2_NET_INCLUDE_DIR}
