--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,7 +82,10 @@ SET(vangers_SRCS
 	${WINDOWS_RES}
 )
 
-ADD_EXECUTABLE(vangers ${vangers_SRCS})
+SET(VANGERS_ICON vangers.icns)
+SET(VANGERS_ICON_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../osx/Resource/${VANGERS_ICON})
+
+ADD_EXECUTABLE(vangers MACOSX_BUNDLE ${vangers_SRCS} ${VANGERS_ICON_PATH})
 
 IF(WIN32)
 	SET(WIN_LIB 
@@ -91,6 +94,16 @@ IF(WIN32)
 		#-Wl,-subsystem,windows
 	)
 ENDIF(WIN32)
+
+IF(APPLE)
+	SET(MACOSX_BUNDLE_ICON_FILE ${VANGERS_ICON})
+	SET_SOURCE_FILES_PROPERTIES(${VANGERS_ICON_PATH} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+	ADD_CUSTOM_COMMAND(TARGET vangers POST_BUILD
+			COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../osx/third_party_libs_tool/third_party_libs_tool "$<TARGET_FILE_DIR:vangers>/../..")
+	ADD_CUSTOM_COMMAND(TARGET vangers POST_BUILD
+			COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../osx/wrap_with_shell.sh "$<TARGET_FILE_DIR:vangers>/vangers" "${CMAKE_CURRENT_SOURCE_DIR}/../osx/MacOS/vangers")
+
+ENDIF(APPLE)
 
 TARGET_LINK_LIBRARIES(vangers
 	${SDL2_LIBRARY}
