CP: VGL library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,3 +87,4 @@ ADD_SUBDIRECTORY("lib/xgraph")
 ADD_SUBDIRECTORY("lib/xsound")
 ADD_SUBDIRECTORY("lib/xtool")
 ADD_SUBDIRECTORY("lib/utils")
+ADD_SUBDIRECTORY("lib/vgl")
