--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ addons:
           - libavcodec-dev
           - libavformat-dev
           - libavutil-dev
+          - libglew-dev
+          - libglm-dev
 before_install:
   - git clone --depth 1 https://github.com/stalkerg/clunk.git /tmp/clunk
   - cd /tmp/clunk && cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
