Clunk library as a submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,16 @@ FIND_PACKAGE(VorbisFile REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 find_package(GLM REQUIRED)
 
-FIND_PACKAGE(Clunk REQUIRED)
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/clunk")
+	message(STATUS "Linking with Clunk submodule")
+	set(CLUNK_SUBMODULE ON)
+	set(BUILD_SHARED_LIBS OFF CACHE BOOL INTERNAL FORCE)
+	add_subdirectory("clunk")
+	set(BUILD_SHARED_LIBS ON CACHE BOOL INTERNAL FORCE)
+else ()
+	message(STATUS "Linking with Clunk package")
+	FIND_PACKAGE(Clunk REQUIRED)
+endif ()
 
 FIND_PACKAGE(FFMPEG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
