fix build with ffmpeg on mingw and add possible to build with steam api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,15 @@ IF(DIAGEN_TEST)
 	ADD_DEFINITIONS(-DDIAGEN_TEST)
 ENDIF(DIAGEN_TEST)
 
+IF(STEAM)
+	ADD_DEFINITIONS(-D_STEAM_API_)
+	SET(STEAM_INCLUDE_DIR /c/projects/sdk/public)
+	SET(STEAM_LIBS
+		/c/projects/sdk/redistributable_bin/steam_api.dll
+
+	)
+ENDIF(STEAM)
+
 # globals
 INCLUDE_DIRECTORIES(SYSTEM
 	${ZLIB_INCLUDE_DIR}
@@ -67,6 +76,7 @@ INCLUDE_DIRECTORIES(SYSTEM
 	${OGG_INCLUDE_DIR}
 	${VORBIS_INCLUDE_DIR}
 	${VORBISFILE_INCLUDE_DIR}
+	${STEAM_INCLUDE_DIR}
 )
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -msse2")
