--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ lib/utils/zip_convert
 src/vangers
 
 # TODO: VC stuff, windows binaries
+build/src/vangers.exe
+build/src/logfile.txt
+build/src/libclunk.dll
+build/lib/utils/zip_convert.exe
