--- a/.github/workflows/vangers_build.yml
+++ b/.github/workflows/vangers_build.yml
@@ -8,12 +8,18 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v2
+    - name: install libs
+      run: sudo apt-get install cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
+    - name: download clunk lib
+      run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
+      working-directory: /tmp
+    - name: build and install clunk
+      run: cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
+      working-directory: /tmp/clunk
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: make
-      run: cmake --build build
+      run: make
