fix build dir for github actions

--- a/.github/workflows/vangers_build.yml
+++ b/.github/workflows/vangers_build.yml
@@ -13,13 +13,14 @@ jobs:
     - uses: actions/checkout@v2
     - name: install libs
       run: sudo apt-get install cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
-    - name: download clunk lib
+    - name: [clunk] download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
       working-directory: /tmp
-    - name: build and install clunk
+    - name: [clunk] build and install
       run: cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
       working-directory: /tmp/clunk
     - name: configure
       run: mkdir build && cd build && cmake ..
     - name: make
       run: make
+      working-directory: build
