--- a/.github/workflows/vangers_windows_build.yml
+++ b/.github/workflows/vangers_windows_build.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: numworks/setup-msys2@v1
-    
+      with:
+        msystem: MINGW64
     - name: install libs
-      run: sudo apt-get install cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
+      run: msys2do pacman -S mingw-w64-SDL2 mingw-w64-SDL2_net cmake mingw-w64-libogg mingw-w64-libvorbis mingw-w64-ffmpeg
     - uses: actions/checkout@v1
     - name: clunk download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
