--- a/.github/workflows/vangers_windows_build.yml
+++ b/.github/workflows/vangers_windows_build.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         msys2do mkdir build
         msys2do cd build
-        msys2do cmake -DCMAKE_INSTALL_PREFIX=/mingw64 -G 'MSYS Makefiles' ..
+        msys2do cmake -DCMAKE_INSTALL_PREFIX=/mingw64 -G 'MSYS\ Makefiles' ..
         msys2do make
         msys2do make install
       working-directory: clunk
