--- a/.github/workflows/vangers_windows_build.yml
+++ b/.github/workflows/vangers_windows_build.yml
@@ -30,6 +30,7 @@ jobs:
       run: msys2do mkdir build
     - name: configure
       run: msys2do cmake -G Ninja ..
+      working-directory: build
     - name: make
       run: ninja
       working-directory: build
