forgot msys2do for ninja

--- a/.github/workflows/vangers_windows_build.yml
+++ b/.github/workflows/vangers_windows_build.yml
@@ -32,5 +32,5 @@ jobs:
       run: msys2do cmake -G Ninja ..
       working-directory: build
     - name: make
-      run: ninja
+      run: msys2do ninja
       working-directory: build
