--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -14,7 +14,16 @@ jobs:
       with:
         msystem: MINGW64
     - name: install libs
-      run: msys2do pacman --noconfirm -S mingw-w64-x86_64-ninja mingw-w64-x86_64-gcc mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_net mingw-w64-x86_64-cmake mingw-w64-x86_64-libogg mingw-w64-x86_64-libvorbis
+      run: msys2do pacman --noconfirm -S
+        mingw-w64-x86_64-ninja
+        mingw-w64-x86_64-gcc
+        mingw-w64-x86_64-SDL2
+        mingw-w64-x86_64-SDL2_net
+        mingw-w64-x86_64-cmake
+        mingw-w64-x86_64-libogg
+        mingw-w64-x86_64-libvorbis
+        mingw-w64-x86_64-nasm
+        mingw-w64-x86_64-yasm
     - uses: actions/checkout@v1
     - name: clunk -- download
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
