--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -54,7 +54,7 @@ jobs:
       working-directory: ffmpeg
     - name: ffmpeg -- build and install
       run: |
-        msys2do mingw32-make
+        msys2do mingw32-make -j4
         msys2do mingw32-make install
       working-directory: ffmpeg
     - name: vangers -- create build dir
@@ -79,6 +79,7 @@ jobs:
         msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers-ru/bin/
         msys2do cp /mingw64/bin/zlib1.dll vangers-ru/bin/
         msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers-ru/bin/
+        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers-ru/bin/
         msys2do cp /mingw64/bin/libstdc++-6.dll vangers-ru/bin/
         msys2do cp /mingw64/bin/libwinpthread-1.dll vangers-ru/bin/
         cp build/src/vangers.exe vangers-ru/bin/
