copy libclunk from proper position

--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -73,7 +73,6 @@ jobs:
         msys2do cp /mingw32/bin/avcodec-58.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/avformat-58.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/avutil-56.dll vangers-ru/bin/
-        msys2do cp /mingw32/bin/libclunk.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/libogg-0.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/libvorbis-0.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/libvorbisfile-3.dll vangers-ru/bin/
@@ -82,6 +81,7 @@ jobs:
         msys2do cp /mingw32/bin/libgcc_s_seh-1.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/libstdc++-6.dll vangers-ru/bin/
         msys2do cp /mingw32/bin/libwinpthread-1.dll vangers-ru/bin/
+        cp clunk/build/libclunk.dll vangers-ru/bin/
         cp build/src/vangers.exe vangers-ru/bin/
     - uses: actions/upload-artifact@v1
       with:
