--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ INCLUDE_DIRECTORIES(SYSTEM
 	${STEAM_INCLUDE_DIR}
 )
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -msse2")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-source-encoding -msse2")
 # For modern gcc
 add_definitions(-D_USE_MATH_DEFINES)
 
