we shouldn't have separate releases for russian and english now

--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -67,37 +67,23 @@ jobs:
       working-directory: build
     - name: vangers -- prepare release folder
       run: |
-        msys2do mkdir -p vangers-ru/bin
-        msys2do mkdir -p vangers-en/bin
-        msys2do cp /mingw64/bin/SDL2.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/SDL2_net.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/avcodec-58.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/avformat-58.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/avutil-56.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libogg-0.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libvorbis-0.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/zlib1.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libstdc++-6.dll vangers-ru/bin/
-        msys2do cp /mingw64/bin/libwinpthread-1.dll vangers-ru/bin/
-        cp clunk/build/libclunk.dll vangers-ru/bin/
-        cp vangers-ru/bin/* vangers-en/bin/
-        cp build/src/vangers.exe vangers-ru/bin/
+        msys2do mkdir -p vangers/bin
+        msys2do cp /mingw64/bin/SDL2.dll vangers/bin/
+        msys2do cp /mingw64/bin/SDL2_net.dll vangers/bin/
+        msys2do cp /mingw64/bin/avcodec-58.dll vangers/bin/
+        msys2do cp /mingw64/bin/avformat-58.dll vangers/bin/
+        msys2do cp /mingw64/bin/avutil-56.dll vangers/bin/
+        msys2do cp /mingw64/bin/libogg-0.dll vangers/bin/
+        msys2do cp /mingw64/bin/libvorbis-0.dll vangers/bin/
+        msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers/bin/
+        msys2do cp /mingw64/bin/zlib1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libstdc++-6.dll vangers/bin/
+        msys2do cp /mingw64/bin/libwinpthread-1.dll vangers/bin/
+        cp clunk/build/libclunk.dll vangers/bin/
+        cp build/src/vangers.exe vangers/bin/
     - uses: actions/upload-artifact@v1
       with:
-        name: Vangers-Russian-Release
-        path: vangers-ru
-    - name: vangers -- configure English version
-      run: msys2do cmake -G Ninja .. -DRUSSIAN_VERSION=off
-      working-directory: build
-    - name: vangers -- make English version
-      run: msys2do ninja
-      working-directory: build
-    - name: vangers -- prepare English release folder
-      run: cp build/src/vangers.exe vangers-en/bin/
-    - uses: actions/upload-artifact@v1
-      with:
-        name: Vangers-English-Release
-        path: vangers-en
+        name: Vangers-Release
+        path: vangers
