Reducing warnings number
added few forced warnings-as-errors for modern toolchains
fixed missing virtual d-tor in couple of base virtual classes
fixed missing include guard
fixed invalid or missing parentheses in macro
fixed missing parentheses for operator expressions
added missing default case for switches with error report
fixed invalid CP1251 sources encoding in UTF-8 project
fixed memset non-POD initialization
added missing explicit type casts
removed out-of-bound check for 8-bit type variable
removed unused get_name_by_addr
added option to suppress newer standards' deprecated copy warning
fixed PlayerBody initialization for server and client
fixed non-constant string pointers to constant data
removed duplicate multiplayer.h for server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,31 @@ INCLUDE_DIRECTORIES(SYSTEM
 
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-source-encoding -O2 -msse2 -ftree-vectorize -ffast-math")
+
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=return-type -Werror=delete-non-virtual-dtor")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=parentheses")
+
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=class-memaccess")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=writable-strings")
+endif()
+
+if(SUPPRESS_DEPRECATED_COPY_WARNING)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-copy")
+endif()
+
+if(ENABLE_ADDITIONAL_CHECKS)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=tautological-compare -Werror=misleading-indentation")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=implicit-fallthrough -Werror=int-in-bool-context")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=sequence-point -Werror=unused-value")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=unused-but-set-variable")
+    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror=unsequenced -Werror=unused-comparison")
+    endif()
+endif()
+
 # For modern gcc
 add_definitions(-D_USE_MATH_DEFINES)
 
